# ts-eval

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
examples/: basic_usage.ipynb
test/viz/: test_data_containers.py  test_metrics.py  test_stats.py
tests/: conftest.py  test_metrics.py  test_models.py  test_utils.py
tests/forecast_strategy/: conftest.py  test_naive_fs.py  test_sm_fs.py
tests/viz/: conftest.py  test_api.py  test_data_containers.py  test_eval_table.py  test_metric_container.py  test_time_slices.py  test_utils.py
tests/viz/api/: test_smoke.py
tests/viz/stats/: test_mann_whitney_u.py  test_rank_test.py
ts_eval/: __init__.py  metrics.py  utils.py
ts_eval/features/: fourier.py
ts_eval/forecast_strategy/: base.py  naive.py  sm.py
ts_eval/models/: naive.py
ts_eval/utils/: __init__.py  nans.py  sliding.py  ts_factory.py
ts_eval/viz/: api.py  data_containers.py  eval_table.py  stats.py  time_slices.py  utils.py
ts_eval/viz/components/: __init__.py  dataset_description.py  legend.py  metrics.py  prediction_plot.py  prediction_rankings.py
ts_eval/viz/layouts/: jupyter_html.py
ts_eval/viz/metrics/: __init__.py  adaptors.py  defs.py  factories.py  metric_container.py
ts_eval/viz/stats/: mann_whitney_u.py  rank_test.py
